# Hackathon-Phase-2-Todo-Web-App

./: CLAUDE.md  README.md  auth.ts  lint_output.txt  package-lock.json  package.json
charts/taskflow-backend/: Chart.yaml  values.yaml
charts/taskflow-frontend/: Chart.yaml  values.yaml
claude/agents/: agent-organizer.md  api-documenter.md  architect-reviewer.md  auth-security-specialist.md  auth0-expert.md  backend-architect.md  backend-developer.md  backend-security-coder.md  better-auth-expert.md  code-reviewer.md  context-manager.md  database-administrator.md  database-architect.md  deployment-engineer.md  docker-expert.md  documentation-engineer.md  fastapi-backend-engineer.md  fastapi-pro.md  frontend-developer.md  knowledge-synthesizer.md  kubernetes-architect.md  kubernetes-specialist.md  mcp-developer.md  monorepo-architect.md  multi-agent-coordinator.md  neon-postgres-ops.md  nextjs-developer.md  nextjs-ui-generator.md  postgres-pro.md  prompt-engineer.md  python-pro.md  research-analyst.md  search-specialist.md  security-engineer.md  sql-pro.md  (+3 more)
mcp-server/: README.md  pyproject.toml
mcp-server/src/: __init__.py  server.py
mcp-server/src/db/: __init__.py  connection.py
mcp-server/src/errors/: __init__.py  codes.py
mcp-server/src/models/: __init__.py  task.py
mcp-server/src/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
mcp-server/tests/: __init__.py  conftest.py  test_add_task.py  test_complete_task.py  test_delete_task.py  test_list_tasks.py  test_update_task.py  test_user_isolation.py
(+192 files in other folders)
